WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320162
providerDidCloseNotifications() stops closing notifications after the first persistent one
https://bugs.webkit.org/show_bug.cgi?id=320162
Summary
providerDidCloseNotifications() stops closing notifications after the first p...
Chris Dumez
Reported
2026-07-23 22:46:59 PDT
providerDidCloseNotifications() stops closing notifications after the first persistent one
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-07-23 22:49:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70095
EWS
Comment 2
2026-07-27 14:45:20 PDT
Committed
318007@main
(e64287e8977f): <
https://commits.webkit.org/318007@main
> Reviewed commits have been landed. Closing PR #70095 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-07-27 14:46:13 PDT
<
rdar://problem/183362637
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug