Tools/TestWebKitAPI/Helpers/TestNotificationProvider.h
@@ -51,6 +51,10 @@ public:
     void closeWebNotification(WKNotificationRef);
     bool simulateNotificationClick();
     bool simulateNotificationClose();
+    // Closes every notification shown so far in a single provider callback, i.e. passing all
+    // their identifiers to WKNotificationManagerProviderDidCloseNotifications as one array.
+    bool simulateMultipleNotificationsClose();
+    size_t pendingNotificationCount() const { return m_pendingNotifications.size(); }
     WKStringRef lastNotificationDataStoreIdentifier() const { return m_lastNotificationDataStoreIdentifier.get(); };
 
     bool hasReceivedShowNotification() const { return m_hasReceivedShowNotification; }
@@ -64,7 +68,7 @@ private:
 
     bool m_hasReceivedShowNotification { false };
     bool m_hasReceivedCloseNotification { false };
-    std::pair<WKNotificationManagerRef, uint64_t> m_pendingNotification;
+    Vector<std::pair<WKNotificationManagerRef, uint64_t>> m_pendingNotifications;
     WKRetainPtr<WKStringRef> m_lastNotificationDataStoreIdentifier;
 };
 
